src/test/ui/parser/keyword-const-as-identifier.stderr
error: expected identifier, found keyword `const`
  --> $DIR/keyword-const-as-identifier.rs:4:9
   |
LL |     let const = "foo";
   |         ^^^^^ expected identifier, found keyword
   |
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#const = "foo";
   |         ^^^^^^^

error: aborting due to previous error

