src/test/ui/parser/keyword-const-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py const'

fn main() {
    let const = "foo"; //~ error: expected pattern, found keyword `const`
}
